* MWExceptionHandler::rollbackMasterChangesAndLog(), deprecated in 1.37, has
  been removed. Use ::rollbackPrimaryChangesAndLog() instead.
* LanguageConverterFactory::isTitleConversionDisabled(), deprecated in 1.36,
  has been removed. Use ::isLinkConversionDisabled() instead.
* MediaWikiIntegrationTestCase::$tablesUsed has been deprecated. The framework
  now detects these automatically.
* Support for setting dynamic property on StatusValue object has been removed.
  To pass your arbitrary data along the object, use StatusValue::statusData
  property (which is always declared).
* The global function wfReportTime(), deprecated since 1.40, has been removed.
* The skin template parameter 'reporttime', deprecated since 1.41, has been
  removed.
* WikiPage::getPageIsRedirectField(), deprecated since 1.41, has been removed.
* WikiPage::insertRedirect(), deprecated since 1.41, has been removed.
* Several methods in PageArchive, all deprecated in 1.38, have been removed:
  - ::listRevisions()
  - ::getRevisionRecordByTimestamp()
  - ::getArchivedRevisionRecord()
  - ::getPreviousRevisionRecord()
  - ::getLastRevisionId()
  - ::isDeleted()
  - ::getFileStatus()
  - ::getRevisionStatus()
* Database, DatabaseInstaller, DatabaseUpdater, DBPrimaryPos, ResultWrapper and
  SQLPlatform are no longer stable to extend. It is not possible to define
  database types in an extension.
* UserDef::PARAM_ALLOWED_USER_TYPES now differentiates between temporary account
  usernames and user accounts. Any endpoints that want temp users to be
  valid but were passing a name through will break. Temp users must now be
  explicitly allowed.
* The Hooks class, a legacy wrapper for HooksContainer, has been removed. All of
  its contents have been previously deprecated in 1.35 (or 1.41 for ::runner()):
  - ::register()
  - ::clear(),
  - ::isRegistered()
  - ::getHandlers()
  - ::run()
  - ::runWithoutAbort()
  - ::runner()
* Article::__get(), ::__set(), deprecated since 1.35, have been removed.